# hack-and-roll-2026-SEntralian-project

./: README.md  Raspberry_pi_full_setup.md
backend/: .gitignore  Cargo.toml  RASPBERRY_PI_SETUP.md  image_library.csv
backend/src/: main.rs
backend/src/handlers/: embedding.rs  health.rs  image_library_generator.rs  image_match.rs  mod.rs  poem.rs  roast.rs
backend/src/lib/: image_library.rs  mod.rs
backend/src/models/: mod.rs  ollama.rs  request.rs  response.rs
backend/src/service/: local_embeddings.rs  mod.rs  ollama.rs  similarity.rs
frontend/: RASPBERRY_PI_SETUP.md
frontend/app/: layout.tsx  page.tsx
frontend/app/hamster/: page.tsx
frontend/app/menu/: page.tsx
frontend/app/poem/: page.tsx
frontend/app/print/: page.tsx
frontend/app/printer/: page.tsx
frontend/app/roast/: page.tsx
frontend/components/: index.ts
frontend/components/camera/: CameraCapture.tsx  CameraView.tsx  CaptureButton.tsx  index.ts
frontend/components/result/: ResultDisplay.tsx  index.ts
frontend/components/ui/: BackButton.tsx  Button.tsx  ErrorMessage.tsx  LoadingOverlay.tsx  Spinner.tsx  index.ts
frontend/lib/: index.ts
frontend/lib/api/: client.ts  hamster.ts  index.ts  poem.ts  roast.ts
frontend/lib/contexts/: PrinterContext.tsx  index.ts
frontend/lib/hooks/: index.ts  useBluetoothPrinter.ts  useCamera.ts  useEdgeDetection.ts
frontend/lib/services/: index.ts  print-service.ts
frontend/lib/types/: bluetooth-printer.ts  bluetooth.d.ts  index.ts
frontend/lib/utils/: bluetooth-printer.ts  camera.ts  dithering.ts  edge-detection.ts  image-processor.ts  (+3 more)
(+2 files in other folders)
